# Intel8080-Haskell

./: .gitignore  CHANGELOG.md  Intel8080-Haskell.cabal  README.md  main.hs
app/: ArithInstructions.hs  BitwiseInstructions.hs  Disassembler.hs  Interrupts.hs  JumpInstructions.hs  LoadInstructions.hs  Macros.hs  Main.hs  MoveInstructions.hs  Special.hs  StackInstructions.hs  States.hs  Utils.hs  disassembler.hs  main.hs
