cabal-version:      2.4
name:               Intel8080-Haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Intel8080-Haskell
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Disassembler

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, 
                      binary >= 0.8.9.0,
                      bytestring >=0.11.4.0,
                      containers >=0.6.5.1,
                      mtl >=2.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: MultiWayIf, ViewPatterns
